// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/GraphNode.vue snapshot initial 1`] = `
<g
  title="make_vector2"
  transform="translate(0, 0)"
>
  <g>
    <path
      d="M0,0L140,0L140,100L0,100z"
      fill="#eee"
      stroke="#555"
      stroke-width="1"
    />
  </g>
  <g>
    <text
      class="view-only"
      dominant-baseline="text-before-edge"
      fill="#000"
      font-size="16"
      x="8"
      y="3"
    >
      make_vector2
    </text>
    <line
      stroke="#555"
      x2="140"
      y1="28"
      y2="28"
    />
  </g>
  <g>
    
    
  </g>
  <g>
    
    
  </g>
</g>
`;

exports[`src/components/elements/GraphNode.vue snapshot selected 1`] = `
<g
  title="make_vector2"
  transform="translate(0, 0)"
>
  <g>
    <path
      d="M0,0L140,0L140,100L0,100z"
      fill="#eee"
      stroke="orange"
      stroke-width="2"
    />
  </g>
  <g>
    <text
      class="view-only"
      dominant-baseline="text-before-edge"
      fill="#000"
      font-size="16"
      x="8"
      y="3"
    >
      make_vector2
    </text>
    <line
      stroke="#555"
      x2="140"
      y1="28"
      y2="28"
    />
  </g>
  <g>
    
    
  </g>
  <g>
    
    
  </g>
</g>
`;
